Add initial structure for Login and Register pages
Implemented basic layout for login and registration pages. Username and password etc. authentication functionality will be added in a future update.