@@ -65,6 +65,7 @@ jlinkZip {
 tasks.withType(JavaExec) {
   jvmArgs = [
           '--module-path', configurations.runtimeClasspath.asPath,
-          '--add-modules', 'javafx.controls,javafx.fxml'
+          '--add-modules', 'javafx.controls,javafx.fxml',
+          '--enable-native-access=javafx.graphics'
   ]
 }
